--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="text-white">Tratamientos</div>
                 <h2>Tratamientos</h2>
                 <p>Texto de tratamientos blabla</p>
-                    <ul class="list-group-horizontal list-group text-white bg-primary pt-5">
+                    <ul class=" list-group text-white bg-primary pt-5">
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Lesiones deportivas</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Rehabilitación</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Trabajo preventivo y movilidad</li>
@@ -158,7 +158,7 @@
             </div>
         </section>
 
-        <!-- Localización -->
+        <!-- Tarifas -->
         <section class="row justify-content-md-center p-2 pt-5 pb-5 m-0 bg-secondary">
             <div class="col-12 col-lg-10">
                 <a class="anchor" id="tarifas"></a>
