--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top p-0">
     <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/fyr-square.jpg" alt="Fisioterapia y Rehabilitación" class="p-0" style="width: 90px;"></a> <span><i class="fas fa-mobile-alt fa-2x"></i><i class="fab fa-whatsapp fa-2x p-3"></i><a href="tel:+34627694876" class="fs-2 text-decoration-none text-muted">627 694 876</a></span>
+        <a class="navbar-brand" href="#"><img src="assets/images/fyr-square.jpg" alt="Fisioterapia y Rehabilitación" class="p-0" style="width: 90px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
