--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="card-body">
                         <h3 class="card-title pricing-card-title">45€</h3>
                         <div class="text-muted fw-light"> ---</div>
-                        <a href="https://wa.me/0034627694876?text=Hola,%20me%20interesa%20el%20plan%201%20sesión" class="w-100 btn btn-lg btn-outline-primary"><i class="fab fa-whatsapp p-3"></i>Contacta</a>
+                        <a href="https://wa.me/+34627694876?text=Hola,%20me%20interesa%20el%20plan%201%20sesión" class="w-100 btn btn-lg btn-outline-primary"><i class="fab fa-whatsapp p-3"></i>Contacta</a>
                         </div>
                     </div>
                     </div>
@@ -185,7 +185,7 @@
                         <div class="card-body">
                         <h3 class="card-title pricing-card-title">215€</h3>
                         <div class="text-muted fw-light"> 43€/sesión</div>
-                        <a href="https://wa.me/0034627694876?text=Hola,%20me%20interesa%20el%20plan%205%20sesiones" class="w-100 btn btn-lg btn-primary"><i class="fab fa-whatsapp p-3 text-white"></i>Contacta</a>
+                        <a href="https://wa.me/+34627694876?text=Hola,%20me%20interesa%20el%20plan%205%20sesiones" class="w-100 btn btn-lg btn-primary"><i class="fab fa-whatsapp p-3 text-white"></i>Contacta</a>
                         </div>
                     </div>
                     </div>
@@ -197,7 +197,7 @@
                         <div class="card-body">
                         <h3 class="card-title pricing-card-title">400 €</h3>
                         <div class="text-muted fw-light"> 40€/sesión</div>
-                        <a href="https://wa.me/0034627694876?text=Hola,%20me%20interesa%20el%20plan%2010%20sesiones" class="w-100 btn btn-lg btn-primary"><i class="fab fa-whatsapp p-3 text-white"></i>Contacta</a>
+                        <a href="https://wa.me/+34627694876?text=Hola,%20me%20interesa%20el%20plan%2010%20sesiones" class="w-100 btn btn-lg btn-primary"><i class="fab fa-whatsapp p-3 text-white"></i>Contacta</a>
                         </div>
                     </div>
                     </div>
