--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     </div>
     
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 </html>
