--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 <div class="text-white">Contacto</div>
                 <h2 id="projects" class="mb-4 text-white">Contacta con nosotros</h2>
                 <p class="text-center">
-                    <a href="tel:+34627694876" class="fs-2 text-decoration-none btn btn-light text-primary"><i class="fas fa-mobile-alt p-2 text-primary"></i>627 694 876</a>
-                    <a href="https://wa.me/+34627694876?text=¡Hola!" class="fs-2 text-decoration-none text-primary btn btn-light"><i class="fab fa-whatsapp p-2 text-primary"></i>627 694 876</a>
+                    <a href="tel:+34627694876" class="fs-2 text-decoration-none btn btn-light text-primary m-2"><i class="fas fa-mobile-alt p-2 text-primary"></i>627 694 876</a>
+                    <a href="https://wa.me/+34627694876?text=¡Hola!" class="fs-2 text-decoration-none  btn btn-light text-primary m-2"><i class="fab fa-whatsapp p-2 text-primary"></i>627 694 876</a>
                 </p>
                 <p class="text-white text-center pt-3">Síguenos en Instagram <a href="https://www.instagram.com/fisioterapiamajadahonda/" class="text-white text-decoration-none fw-bold"><i class="fab fa-instagram fw-bold"></i> fisioterapiamajadahonda</a></p>
             </div>
