--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
                 <div class="row">
                     <div class="col-12 col-md-5">
                         <img src="assets/images/fisioterapiayrehabilitacion.com-carlos.jpg" alt="Carlos Álvarez Fisioterapeuta"  class="img-fluid">
+                        <div class="text-center text-muted p-3">Carlos Álvarez - Fisioterapeuta</div>
                     </div>
                     <div class="col-12 col-md-7">
-                        <ul class="list-group list-group-flush mt-3">
+                        <ul class="list-group text-primary">
                             <li class="list-group-item">
                                 <i class="far fa-file-alt" aria-hidden="true"></i> Licenciado en Fisioterapia
                             <li class="list-group-item"><i class="far fa-file-alt " aria-hidden="true"></i> Licenciado en Osteopatía</li>
@@ -128,14 +129,14 @@
                 <h2>Tratamientos</h2>
                 <p>Texto de tratamientos blabla...</p>
                 <div class="row">
-                    <ul class="col-12 col-md-6 list-group text-white bg-primary pt-2">
+                    <ul class="col-12 col-md-6 list-group list-group-flush text-white bg-primary pt-2">
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Lesiones deportivas</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Rehabilitación</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Trabajo preventivo y movilidad</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Masaje lumbar</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> ...</li>
                     </ul>
-                    <ul class="col-12 col-md-6 list-group text-white bg-primary pt-2">
+                    <ul class="col-12 col-md-6 list-group list-group-flush text-white bg-primary pt-2">
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Lesiones deportivas</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Rehabilitación</li>
                         <li class="list-group-item bg-primary text-white"><i class="fas fa-angle-double-right" aria-hidden="true"></i> Trabajo preventivo y movilidad</li>
