--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="text-center text-muted p-3">Carlos Álvarez - Fisioterapeuta</div>
                     </div>
                     <div class="col-12 col-md-7">
-                        <ul class="list-group text-primary">
+                        <ul class="list-group list-group-flush text-primary">
                             <li class="list-group-item">
                                 <i class="far fa-file-alt" aria-hidden="true"></i> Licenciado en Fisioterapia
                             <li class="list-group-item"><i class="far fa-file-alt " aria-hidden="true"></i> Licenciado en Osteopatía</li>
