--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fisioterapira y Rehabilitación en Majadahonda | Carlos Álvarez</title>
-    <description>Gabinete de fisioterapia especializado en fisioterapia deportiva, punción seca, osteopatía, terapia miofascial y rehabilitación.</description>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,10 +14,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Gabinete de fisioterapia especializado en fisioterapia deportiva, punción seca, osteopatía, terapia miofascial y rehabilitación">
     <script src="https://kit.fontawesome.com/9a7beb9b8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top p-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top p-0">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="assets/images/fyr-square.jpg" alt="Fisioterapia y Rehabilitación" class="p-0" style="width: 90px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
     </div>
     </nav>
     <div class="container-fuild">
-        <div class="mt-2"></div>
+
         <!-- Home -->
         <section class="row p-0 m-0">
             <div id="carouselExampleCaptions" class="carousel slide p-0" data-bs-ride="carousel">
